--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,59 @@
+button {
+  background-color: rgb(226, 229, 229);
+}
+
+button:hover {
+  background-color: rgb(221, 221, 221);
+}
+
 button > * {
   pointer-events: none;
 }
 
+a {
+  color: rgb(241, 234, 234);
+  text-decoration: none; /* no underline */
+}
+
+a:hover {
+  color: rgb(0, 0, 0);
+}
+
 .header {
-  background-color: greenyellow;
+  background-color: rgb(100, 100, 100);
   height: 120px;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+
+.header > * {
+  color: rgb(241, 234, 234);
+}
+
+.logo {
+  padding: 50px;
+  font-size: 2.5rem;
+}
+
+.score-box {
+  margin: 50px;
 }
 
 .card-wrapper {
-  border: 1px solid black;
+  border: 1px solid rgb(70, 70, 70);
+  padding: 15px;
+  border-radius: 5px;
   display: flex;
   flex-wrap: wrap;
-  max-width: 90%;
+  max-width: 80%;
   margin: auto;
 }
 
 .card-box {
-  border: 1px solid green;
+  border: 1px solid rgb(164, 165, 164);
+  border-radius: 5px;
   min-width: 150px;
-
   min-height: 150px;
   margin: 10px;
   display: flex;
@@ -28,9 +63,33 @@ button > * {
 }
 
 .card-box:hover {
-  border: 1px solid greenyellow;
+  border: 1px solid rgb(75, 74, 74);
 }
 
 .thai-month {
   font-size: 1.5rem;
+}
+
+.footer {
+  position: fixed;
+  height: 60px;
+  background-color: rgb(100, 100, 100);
+  color: rgb(241, 234, 234);
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  margin-bottom: 0px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+@media (max-width: 800px) {
+  .header {
+  }
+
+  .logo {
+    padding: 30px;
+    font-size: 1.8rem;
+  }
 }
