--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,16 @@ a:hover {
   padding-bottom: 5px;
 }
 
+#toggle {
+  display: flex;
+  justify-content: center;
+}
+
+input {
+  margin: 0;
+  margin-left: 4px;
+}
+
 .card-wrapper {
   border: 1px solid rgb(70, 70, 70);
   padding: 15px;
@@ -87,10 +97,15 @@ a:hover {
 
 @media (max-width: 800px) {
   .header {
+    padding: 10px;
   }
 
   .logo {
     padding: 30px;
     font-size: 1.8rem;
+  }
+
+  .score-box {
+    margin: 20px;
   }
 }
